--- a/blueworks/templates/sites.html
+++ b/blueworks/templates/sites.html
@@ -197,7 +197,7 @@
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
                                 &nbsp;Coworker</span>
                         </li>
-                        <li onclick="window.location='./500.html'" style="color: grey; font-weight: 500;
+                        <li onclick="window.location='/blueworks/animateur.html'" style="color: grey; font-weight: 500;
                                 font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-table icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -415,7 +415,7 @@
                                                 &nbsp;&nbsp;&nbsp;&nbsp;
                                                 &nbsp;Coworker</span>
                                         </li>
-                                        <li onclick="window.location='./Accueil.html'" style="color: grey; font-weight: 500;
+                                        <li onclick="window.location='/blueworks/animateur.html'" style="color: grey; font-weight: 500;
                                                     font-size: 17px; padding: 14px; cursor: pointer;">
                                             <i class="fa fa-table icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                             <span class="mini-click-non" style="position: absolute; top: 10px">
