--- a/blueworks/templates/coworker.html
+++ b/blueworks/templates/coworker.html
@@ -92,7 +92,7 @@
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
                                 &nbsp;Coworker</span>
                         </li>
-                        <li onclick="window.location='./500.html'" style="color: grey; font-weight: 500;
+                        <li onclick="window.location='/blueworks/animateur.html'" style="color: grey; font-weight: 500;
                             font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-table icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -116,7 +116,7 @@
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
                                 &nbsp;Notifications</span>
                         </li>
-                        <li onclick="window.location='./500.html'" style="color: grey; font-weight: 500;
+                        <li onclick="window.location='/blueworks/animateur.html'" style="color: grey; font-weight: 500;
                             font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
@@ -439,9 +439,9 @@
                                     </div>
                                     <table id="table" data-toggle="table" data-pagination="true" data-search="true"
                                         data-show-columns="true" data-show-pagination-switch="true"
-                                        data-url='{% url "coworker" %}' data-show-refresh="true" data-key-events="true"
-                                        data-show-toggle="true" data-resizable="true" data-cookie="true"
-                                        data-cookie-id-table="saveId" data-show-export="true"
+                                        data-url='/blueworks/utilisateur/customer' data-show-refresh="true"
+                                        data-key-events="true" data-show-toggle="true" data-resizable="true"
+                                        data-cookie="true" data-cookie-id-table="saveId" data-show-export="true"
                                         data-click-to-select="true">
                                         <thead>
                                             <tr>
