--- a/blueworks/templates/index.html
+++ b/blueworks/templates/index.html
@@ -94,6 +94,7 @@
             success: function (data) {
               localStorage.setItem('token', data.token);
               localStorage.setItem('pseudo', data.user.pseudo);
+              localStorage.setItem('email', data.user.email);
               sessionStorage.setItem('ipf', data.refreshToken);
               window.location = 'accueil.html';
             },
