--- a/blueworks/templates/animateur.html
+++ b/blueworks/templates/animateur.html
@@ -145,7 +145,7 @@
                             font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                &nbsp;Liens</span>
+                                &nbsp;Inviter</span>
                         </li>
                     </ul>
                 </nav>
@@ -291,7 +291,7 @@
                                                         <li><a href="#"><span class="fa fa-user author-log-ic"></span>My
                                                                 Profile</a>
                                                         </li>
-                                                        <li><a href="index.html"><span
+                                                        <li><a href="#" id="logout"><span
                                                                     class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                         </li>
                                                     </ul>
@@ -367,7 +367,7 @@
                                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                             <span class="mini-click-non" style="position: absolute; top: 10px">
                                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Liens</span>
+                                                &nbsp;Inviter</span>
                                         </li>
                                     </ul>
                                 </nav>
@@ -595,6 +595,10 @@
                         });
                     });
                 }));
+            $('#logout').on('click', function () {
+                window.location = '/blueworks/logout?e=' + localStorage.getItem('email');
+                localStorage.clear();
+            });
         })(jQuery);
     </script>
 </body>
