--- a/blueworks/templates/mailbox-view.html
+++ b/blueworks/templates/mailbox-view.html
@@ -118,7 +118,7 @@
                                     font-size: 17px; padding: 14px; cursor: pointer;">
                                 <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                 <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                    &nbsp;Liens</span>
+                                    &nbsp;Inviter</span>
                             </li>
                         </ul>
                     </nav>
@@ -271,7 +271,7 @@
                                                             <li><a href="#"><span
                                                                         class="fa fa-cog author-log-ic"></span>Settings</a>
                                                             </li>
-                                                            <li><a href="index.html"><span
+                                                            <li><a href="#" id="logout"><span
                                                                         class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                             </li>
                                                         </ul>
@@ -346,7 +346,7 @@
                                                     font-size: 17px; padding: 14px; cursor: pointer;">
                                                     <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                                     <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                                            &nbsp;Liens</span>
+                                                            &nbsp;Inviter</span>
                                                 </li>
                                             </ul>
                                     </nav>
