--- a/blueworks/templates/Accueil.html
+++ b/blueworks/templates/Accueil.html
@@ -226,7 +226,7 @@
                             font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                &nbsp;Liens</span>
+                                &nbsp;Inviter</span>
                         </li>
                     </ul>
                 </nav>
@@ -372,7 +372,7 @@
                                                         <li><a href="#"><span class="fa fa-user author-log-ic"></span>My
                                                                 Profile</a>
                                                         </li>
-                                                        <li><a href="/blueworks/logout"><span
+                                                        <li><a href="#" id="logout"><span
                                                                     class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                         </li>
                                                     </ul>
@@ -448,7 +448,7 @@
                                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                             <span class="mini-click-non" style="position: absolute; top: 10px">
                                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Liens</span>
+                                                &nbsp;Inviter</span>
                                         </li>
                                     </ul>
                                 </nav>
@@ -681,7 +681,6 @@
             </div>
         </div>
     </div>
-
     <!-- jquery
 		============================================ -->
     <script src="{% static 'blueworks/js/vendor/jquery-1.11.3.min.js' %}"></script>
@@ -748,7 +747,8 @@
     <script src="{% static 'blueworks/js/main.js' %}"></script>
     <script lang="javascript">
         (function ($) {
-            $(document).load($('#username').html(localStorage.getItem('pseudo')));
+            $(document).load($('#username').html(localStorage.getItem(
+                'pseudo')));
             $.getJSON('/blueworks/type', function (data) {
                 $('.type').remove();
                 data.map(type => {
@@ -824,6 +824,10 @@
                 $('[name="formule"] option').removeClass('select');
                 $(this).addClass('select');
                 populate_tranche();
+            });
+            $('#logout').on('click', function () {
+                window.location = '/blueworks/logout?e=' + localStorage.getItem('email');
+                localStorage.clear();
             });
             $('#delete').on('click', function () {
                 /*$.ajax({
