--- a/blueworks/templates/Reservation.html
+++ b/blueworks/templates/Reservation.html
@@ -129,7 +129,7 @@
                                     font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                &nbsp;Liens</span>
+                                &nbsp;Inviter</span>
                         </li>
                     </ul>
                 </nav>
@@ -283,7 +283,7 @@
                                                         <li><a href="#"><span
                                                                     class="fa fa-cog author-log-ic"></span>Settings</a>
                                                         </li>
-                                                        <li><a href="login.html"><span
+                                                        <li><a href="#" id="logout"><span
                                                                     class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                         </li>
                                                     </ul>
@@ -358,7 +358,7 @@
                                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                             <span class="mini-click-non" style="position: absolute; top: 10px">
                                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Liens</span>
+                                                &nbsp;Inviter</span>
                                         </li>
                                     </ul>
                                 </nav>
