--- a/blueworks/templates/coworker.html
+++ b/blueworks/templates/coworker.html
@@ -120,7 +120,7 @@
                             font-size: 17px; padding: 14px; cursor: pointer;">
                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                             <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                &nbsp;Liens</span>
+                                &nbsp;Inviter</span>
                         </li>
                     </ul>
                 </nav>
@@ -275,7 +275,7 @@
                                                         <li><a href="#"><span
                                                                     class="fa fa-cog author-log-ic"></span>Settings</a>
                                                         </li>
-                                                        <li><a href="/blueworks/logout"><span
+                                                        <li><a href="#" id="logout"><span
                                                                     class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                         </li>
                                                     </ul>
@@ -351,7 +351,7 @@
                                             <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                             <span class="mini-click-non" style="position: absolute; top: 10px">
                                                 &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Liens</span>
+                                                &nbsp;Inviter</span>
                                         </li>
                                     </ul>
                                 </nav>
@@ -545,6 +545,10 @@
     <script lang="javascript">
         (function ($) {
             $(document).load($('#username').html(localStorage.getItem('pseudo')));
+            $('#logout').on('click', function () {
+                window.location = '/blueworks/logout?e=' + localStorage.getItem('email');
+                localStorage.clear();
+            });
         })(jQuery);
     </script>
 </body>
