--- a/blueworks/templates/tabs.html
+++ b/blueworks/templates/tabs.html
@@ -116,7 +116,7 @@
                                 font-size: 17px; padding: 14px; cursor: pointer;">
                                 <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                 <span class="mini-click-non" style="position: absolute; top: 10px"> &nbsp;&nbsp;&nbsp;&nbsp;
-                                    &nbsp;Liens</span>
+                                    &nbsp;Inviter</span>
                             </li>
                         </ul>
                     </nav>
@@ -261,7 +261,7 @@
                                                             <li><a href="#"><span class="fa fa-user author-log-ic"></span>My
                                                                     Profile</a>
                                                             </li>
-                                                            <li><a href="index.html"><span
+                                                            <li><a href="#" id="logout"><span
                                                                         class="fa fa-lock author-log-ic"></span>Log Out</a>
                                                             </li>
                                                         </ul>
@@ -330,7 +330,7 @@
                                                 <i class="fa fa-bookmark icon-wrap sub-icon-mg" aria-hidden="true"></i>
                                                 <span class="mini-click-non" style="position: absolute; top: 10px">
                                                     &nbsp;&nbsp;&nbsp;&nbsp;
-                                                    &nbsp;Liens</span>
+                                                    &nbsp;Inviter</span>
                                             </li>
                                         </ul>
                                     </nav>
