--- a/blueworks/templates/dashboard.html
+++ b/blueworks/templates/dashboard.html
@@ -407,7 +407,7 @@
                         type: params.type
                     },
                     title: {
-                        text: 'income per month'
+                        text: 'Revenue par mois'
                     },
                     legend: {
                         layout: 'vertical',
@@ -439,13 +439,6 @@
                     plot_oneOptions: {
                         series: {
                             fillOpacity: 0
-                            /*linearGradient: [0, 0, 0, 300],
-                            stops: [
-                                [0, Highcharts.getOptions().colors[0]],
-                                [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0)
-                                    .get('rgba')
-                                ]
-                            ]*/
                         }
                     },
                     series: Array(data)
@@ -455,7 +448,7 @@
             function confront(data) {
                 Highcharts.chart('thirth', {
                     title: {
-                        text: 'challenge between employees'
+                        text: 'Difference employes'
                     },
                     yAxis: {
                         title: {
@@ -501,16 +494,16 @@
                 });
             }
 
-            function plot_type(data, drilldownData) {
+            function plot_type(data, drilldownData, year) {
                 Highcharts.chart('fourth', {
                     chart: {
                         type: 'column'
                     },
                     title: {
-                        text: 'income per space type, 2019'
+                        text: 'Revenue par type d\'espace, ' + year
                     },
                     subtitle: {
-                        text: 'Click the columns to view detail'
+                        text: 'cliquez sur la colone pour plus de details'
                     },
                     xAxis: {
                         type: 'category'
@@ -567,7 +560,7 @@
                         cible: 'container',
                         type: 'areaspline'
                     });
-                }), $.getJSON('/blueworks/stats/2019/animateur/', function (data) {
+                }), $.getJSON('/blueworks/stats/' + new Date().getFullYear() + '/animateur/', function (data) {
                     var to_plot = [];
                     data.map(anim => {
                         var revenusData = Array.from({
@@ -582,7 +575,7 @@
                         });
                     });
                     confront(to_plot);
-                }), $.getJSON('/blueworks/stats/2019/type/', function (data) {
+                }), $.getJSON('/blueworks/stats/' + new Date().getFullYear() + '/type/', function (data) {
                     var to_plot = [];
                     var drilldownData = [];
                     var revenusData;
@@ -608,7 +601,7 @@
                             data: revenusData
                         });
                     });
-                    plot_type(to_plot, drilldownData);
+                    plot_type(to_plot, drilldownData, new Date().getFullYear());
                 })
             );
             $('#logout').on('click', function () {
