--- a/blueworks/templates/Accueil.html
+++ b/blueworks/templates/Accueil.html
@@ -241,209 +241,7 @@
             </div>
         </div>
         <div class="header-advance-area">
-            <div class="header-top-area">
-                <div class="container-fluid" style="background-color: rgb(0, 111, 186)">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="header-top-wraper">
-                                <div class="row">
-                                    <div class="col-lg-1 col-md-0 col-sm-1 col-xs-12">
-                                        <div class="menu-switcher-pro">
-                                            <button type="button" id="sidebarCollapse"
-                                                class="btn bar-button-pro header-drl-controller-btn btn-info navbar-btn">
-                                                <i class="fa fa-bars"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-7 col-sm-6 col-xs-12">
-                                        <div class="header-top-menu tabl-d-n">
-                                            <ul class="nav navbar-nav mai-top-nav">
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-                                        <div class="header-right-info">
-                                            <ul class="nav navbar-nav mai-top-nav header-right-menu">
-                                                <li class="nav-item dropdown">
-                                                    <a href="#" data-toggle="dropdown" role="button"
-                                                        aria-expanded="false" class="nav-link dropdown-toggle"><i
-                                                            class="fa fa-envelope-o adminpro-chat-pro"
-                                                            aria-hidden="true"></i><span
-                                                            class="indicator-ms"></span></a>
-                                                    <!-- <div role="menu" style="background-color: rgb(0, 111, 186)"
-                                                        class="author-message-top dropdown-menu animated zoomIn" style="border: 1px solid white">
-                                                        <div class="message-single-top" style="border: 1px solid white">
-                                                            <h1>Message</h1>
-                                                        </div>
-                                                        <ul class="message-menu" style="border: 1px solid white">
-                                                            <li style="border: 1px solid white">
-                                                                <a href="#">
-                                                                    <div class="message-img">
-                                                                        <img src="{% static 'blueworks/img/contact/3.jpg" alt="">
-                                                                    </div>
-                                                                    <div class="message-content">
-                                                                        <span class="message-date">16 Sept</span>
-                                                                        <h2>Victor Jara</h2>
-                                                                        <p>Please done this project as soon possible.
-                                                                        </p>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="#">
-                                                                    <div class="message-img">
-                                                                        <img src="{% static 'blueworks/img/contact/2.jpg" alt="">
-                                                                    </div>
-                                                                    <div class="message-content">
-                                                                        <span class="message-date">16 Sept</span>
-                                                                        <h2>Victor Jara</h2>
-                                                                        <p>Please done this project as soon possible.
-                                                                        </p>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                        </ul>
-                                                        <div class="message-view">
-                                                            <a href="#">View All Messages</a>
-                                                        </div>
-                                                    </div> -->
-                                                </li>
-                                                <li class="nav-item"><a href="#" data-toggle="dropdown" role="button"
-                                                        aria-expanded="false" class="nav-link dropdown-toggle"><i
-                                                            class="fa fa-bell-o" aria-hidden="true"></i><span
-                                                            class="indicator-nt"></span></a>
-                                                    <!-- <div role="menu"
-                                                        class="notification-author dropdown-menu animated zoomIn">
-                                                        <div class="notification-single-top">
-                                                            <h1>Notifications</h1>
-                                                        </div>
-                                                        <ul class="notification-menu">
-                                                            <li>
-                                                                <a href="#">
-                                                                    <div class="notification-icon">
-                                                                        <i class="fa fa-eraser adminpro-shield"
-                                                                            aria-hidden="true"></i>
-                                                                    </div>
-                                                                    <div class="notification-content">
-                                                                        <span class="notification-date">16 Sept</span>
-                                                                        <h2>Victor Jara</h2>
-                                                                        <p>Please done this project as soon possible.
-                                                                        </p>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                            <li>
-                                                                <a href="#">
-                                                                    <div class="notification-icon">
-                                                                        <i class="fa fa-line-chart adminpro-analytics-arrow"
-                                                                            aria-hidden="true"></i>
-                                                                    </div>
-                                                                    <div class="notification-content">
-                                                                        <span class="notification-date">16 Sept</span>
-                                                                        <h2>Victor Jara</h2>
-                                                                        <p>Please done this project as soon possible.
-                                                                        </p>
-                                                                    </div>
-                                                                </a>
-                                                            </li>
-                                                        </ul>
-                                                        <div class="notification-view">
-                                                            <a href="#">View All Notification</a>
-                                                        </div>
-                                                    </div> -->
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="#" data-toggle="dropdown" role="button"
-                                                        aria-expanded="false" class="nav-link dropdown-toggle">
-                                                        <i class="fa fa-user adminpro-user-rounded header-riht-inf"
-                                                            aria-hidden="true"></i>
-                                                        <span class="admin-name" id="username"></span>
-                                                        <i
-                                                            class="fa fa-angle-down adminpro-icon adminpro-down-arrow"></i>
-                                                    </a>
-                                                    <ul role="menu" style="background-color:  rgb(0, 111, 186)"
-                                                        class="dropdown-header-top author-log dropdown-menu animated zoomIn">
-                                                        <li><a href="#"><span class="fa fa-user author-log-ic"></span>My
-                                                                Profile</a>
-                                                        </li>
-                                                        <li><a href="#" id="logout"><span
-                                                                    class="fa fa-lock author-log-ic"></span>Log Out</a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Mobile Menu start -->
-            <div class="mobile-menu-area">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <div class="mobile-menu">
-                                <nav id="dropdown">
-                                    <ul class="metismenu" id="menu1">
-                                        <li onclick="window.location='/blueworks/dashboard.html'" style="color: grey; font-weight: 500;
-                                                    font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-dashboard icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Tableau de bord</span>
-                                        </li>
-                                        <li onclick="window.location.reload(true)" style="background-color: rgb(0, 111, 186); color: whitesmoke;
-                                                font-size: 17px; padding: 14px; font-weight: bold; cursor: pointer;">
-                                            <i class="fa fa-calendar icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Reservations</span>
-                                        </li>
-                                        <li onclick="window.location='/blueworks/coworker.html'" style="color: grey; font-weight: 500;
-                                                font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-user icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Coworker</span>
-                                        </li>
-                                        <li onclick="window.location='./Accueil.html'" style="color: grey; font-weight: 500;
-                                                font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-table icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Animateurs</span>
-                                        </li>
-                                        <li onclick="window.location='./mailbox.html'" style="color: grey; font-weight: 500;
-                                                font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-envelope icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Courrier</span>
-                                        </li>
-                                        <li onclick="window.location='/blueworks/sites.html'" style="color: grey; font-weight: 500;
-                                            font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-envelope icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                Gerer Site
-                                        </li>
-                                        <li onclick="window.location='./Accueil.html'" style="color: grey; font-weight: 500;
-                                                font-size: 17px; padding: 14px; cursor: pointer;">
-                                            <i class="fa fa-bell icon-wrap sub-icon-mg" aria-hidden="true"></i>
-                                            <span class="mini-click-non" style="position: absolute; top: 10px">
-                                                &nbsp;&nbsp;&nbsp;&nbsp;
-                                                &nbsp;Notifications</span>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'header.html' %}
         </div>
         <!-- Data Table Start -->
         <div class="data-table-area mg-tb-15">
