--- a/blueworks/templates/Accueil.html
+++ b/blueworks/templates/Accueil.html
@@ -530,6 +530,7 @@
     <!-- main JS
 		============================================ -->
     <script src="{% static 'blueworks/js/main.js' %}"></script>
+    <script src="{% static 'blueworks/js/model/invite.js' %}"></script>
     <script lang="javascript">
         (function ($) {
             $(document).load($('#username').html(localStorage.getItem(
