--- a/blueworks/templates/header.html
+++ b/blueworks/templates/header.html
@@ -145,23 +145,21 @@
       </div>
       <div class="modal-body">
         <div>
-          <form action='{% url "formule" %}' method="post">
-            <label for="">Nom</label>
-            <div class="input-group mg-b-pro-edt">
-              <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-              <input name="f" type="text" class="form-control pro-edt-select form-control-primary input-lg">
-            </div>
-            <label for="">Mail</label>
-            <div class="input-group mg-b-pro-edt">
-              <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-              <input name="f" type="email" class="form-control pro-edt-select form-control-primary input-lg"
-                placeholder="example@gmail.com">
-            </div>
-            <button type="submit" class="btn btn-custon-four btn-primary"
-              style="background-color: rgb(0, 111, 186); width: 10%; margin-left: 45%">
-              <i class="fa fa-check adminpro-informatio" aria-hidden="true"></i>
-              Envoyer</button>
-          </form>
+          <label for="">Nom</label>
+          <div class="input-group mg-b-pro-edt">
+            <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+            <input id="nom_invite" type="text" class="form-control pro-edt-select form-control-primary input-lg">
+          </div>
+          <label for="">Mail</label>
+          <div class="input-group mg-b-pro-edt">
+            <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+            <input name="email_invite" type="email" class="form-control pro-edt-select form-control-primary input-lg"
+              placeholder="example@gmail.com">
+          </div>
+          <button id="invite" type="button" class="btn btn-custon-four btn-primary"
+            style="background-color: rgb(0, 111, 186); width: 10%; margin-left: 45%">
+            <i class="fa fa-check adminpro-informatio" aria-hidden="true"></i>
+            Envoyer</button>
         </div>
       </div>
     </div>
