--- a/blueworks/templates/header.html
+++ b/blueworks/templates/header.html
@@ -153,7 +153,7 @@
           <label for="">Mail</label>
           <div class="input-group mg-b-pro-edt">
             <span class="input-group-addon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-            <input name="email_invite" type="email" class="form-control pro-edt-select form-control-primary input-lg"
+            <input id="email_invite" type="email" class="form-control pro-edt-select form-control-primary input-lg"
               placeholder="example@gmail.com">
           </div>
           <button id="invite" type="button" class="btn btn-custon-four btn-primary"
